@@ -156,7 +156,9 @@ def check_allowed_filetypes(readers, allowed):
                          "Found: {}".format(readernames))
     if readers[0].format not in allowed:
         raise NotImplementedError("ChainReader: continuous=True only "
-                                  "supported for formats: {}".format(allowed))
+                                  "supported for formats: {}.\nFeel free to "
+                                  "contribute an additional file type test to "
+                                  "expand this list.".format(allowed))
 
 
 class ChainReader(base.ProtoReader):
@@ -192,7 +194,7 @@ class ChainReader(base.ProtoReader):
         what frames are used with the continuous option.
 
     The default chainreader will read all frames. The continuous option is
-    currently only supported for XTC and TRR files.
+    currently only supported for XTC, TRR, and LAMMPSDUMP files.
 
     Notes
     -----
